# ai_snake

./: .gitignore  GITHUB_SETUP.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
ai_snake/: __init__.py  config.py  game.py  main.py  render.py  utils.py
tests/: __init__.py  test_basic.py
