[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_snake"
version = "1.0.0"
description = "AI Snake game using A* pathfinding with safety checks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pygame"]
authors = [
    {name = "Darshan Ravindra Konnur", email = "darshanravindra.konnur@gmail.com"}
]
keywords = ["snake", "game", "ai", "pathfinding", "astar", "pygame"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
ai-snake = "ai_snake.main:play"

[project.urls]
Homepage = "https://github.com/darshanrk18/ai_snake"
Repository = "https://github.com/darshanrk18/ai_snake"
Issues = "https://github.com/darshanrk18/ai_snake/issues"
Documentation = "https://github.com/darshanrk18/ai_snake#readme"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ai_snake --cov-report=term-missing --cov-report=html" 